syntax = "proto3";

package rpc;

option go_package = "./rpc";

message AppendEntriesInput {
    uint32 term = 1;
    string leaderId = 2;
    uint32 prevLogIndex = 3;
    uint32 prevLogTerm = 4;
    repeated string entries = 5;
    uint32 leaderCommit = 6;
}

message AppendEntriesOutput {
    uint32 term = 1;
    bool success = 2;
}

message RequestVoteInput {
    uint32 term = 1;
    string candidateId = 2;
    uint32 lastLogIndex = 3;
    uint32 lastLogTerm = 4;
}

message RequestVoteOutput {
    uint32 term = 1;
    bool voteGranted = 2;
}

service Rpc {
    rpc AppendEntries(AppendEntriesInput) returns (AppendEntriesOutput) {}
    rpc RequestVote(RequestVoteInput) returns (RequestVoteOutput) {}
}